--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,7 +1,7 @@
 <div class="container" style="width: 100%; padding: 0px;">
     <div class="jumbotron">
         <h1 class="display-3">Blog</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <p class="lead"> Any feedback would be greatly appreciated!</p>
         <hr class="my-4">
         <div id="disqus_thread"></div>
         <!--<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
