--- a/templates/skills.html
+++ b/templates/skills.html
@@ -2,7 +2,7 @@
     <div class="container" style="width: 100%; padding: 0px;">
         <div class="jumbotron">
             <h1 class="display-3">Skills</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <p class="lead">My knowledge level in different technologies</p>
             <hr class="my-4">
             <div class="row">
             <div ng-repeat = "skillsItem in vm.skillsData.skillItems">
