--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
 <div class="container" style="padding: 0px; width: 100%">
     <div class="jumbotron">
-        <h1 class="display-3">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
+        <h1 class="display-3"></h1>
+        <p class="lead"></p>
+        <!-- <hr class="my-4"> -->
         <div class="row">
             <div class="col-lg-12 ">
 
@@ -16,26 +16,28 @@
                         <div class="title">
                             <a target="_blank" href>Priyanka Gangireddy</a>
                         </div>
-                        <div class="desc">Passionate Web-designer/developer</div>
+                        <div class="desc">Passionate Web-designer/Developer</div>
                     </div>
                     <div class=" quote-container">
                         <p class="quote-text">"{{vm.quotes[0].quote}}"</p>
                         <p class="quote-author">--{{vm.quotes[0].author}}</p>
                     </div>
                     <div class="bottom">
-                        <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
+                        <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/priyagangireddy">
                             <i class="fa fa-twitter"></i>
                         </a>
-                        <a class="btn btn-danger btn-sm" rel="publisher"
-                           href="https://plus.google.com/+ahmshahnuralam">
+                     <!--   <a class="btn btn-danger btn-sm" rel="publisher" href="https://plus.google.com/">
                             <i class="fa fa-google-plus"></i>
+                        </a> -->
+
+                        <a class="btn btn-warning btn-sm" rel="publisher" href="https://github.com/priyankagangireddy">
+                            <i class="fa fa-github"></i>
                         </a>
-                        <a class="btn btn-primary btn-sm" rel="publisher"
-                           href="https://plus.google.com/shahnuralam">
-                            <i class="fa fa-facebook"></i>
+                        <a class="btn btn-primary btn-sm" rel="publisher" href="https://plus.google.com/">
+                            <i class="fa fa-linkedin"></i>
                         </a>
-                        <a class="btn btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
-                            <i class="fa fa-behance"></i>
+                        <a class="btn btn-danger btn-sm" rel="publisher" href="https://www.instagram.com/priyanka.gangireddy">
+                            <i class="fa fa-instagram"></i>
                         </a>
                     </div>
                 </div>
