--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,15 +1,14 @@
 
-    <div class="container" style="padding:0px; height: 100%">
-        <div class="jumbotron">
-            <h1 class="display-3">{{vm.resumeData.heading}}</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-            <hr class="my-4">
-            <div ng-repeat="company in vm.resumeData.professionalExperience">
-                <resume-card-component company-data="company"></resume-card-component>
-            </div>
+<div class="container" style="padding:0px; height: 100%">
+    <div class="jumbotron">
+        <h1 class="display-3">{{vm.resumeData.heading}}</h1>
+        <p class="lead">My Real Time and Internship Experiences</p>
+        <hr class="my-4">
+        <div ng-repeat="company in vm.resumeData.professionalExperience">
+            <resume-card-component company-data="company"></resume-card-component>
         </div>
-
     </div>
 
+</div>
 
 
