--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,8 @@
     <div class="jumbotron">
         <h1 class="display-3"></h1>
         <p class="lead"></p>
-<<<<<<< HEAD
         <!-- <hr class="my-4"> -->
-=======
        <!-- <hr class="my-4"> -->
->>>>>>> master
         <div class="row">
             <div class="col-lg-12 ">
 
@@ -33,13 +30,10 @@
                         <a class="btn btn-warning btn-sm" rel="publisher" href="https://github.com/priyankagangireddy">
                             <i class="fa fa-github"></i>
                         </a>
-                        <a class="btn btn-primary btn-sm" rel="publisher" href="https://plus.google.com/">
+                        <a class="btn btn-primary btn-sm" rel="publisher" href="https://www.linkedin.com/in/priya-reddy-084143147/">
                             <i class="fa fa-linkedin"></i>
                         </a>
-                        <a class="btn btn-primary btn-sm" rel="publisher" href="https://github.com/priyankagangireddy">
-                            <i class="fa fa-github"></i>
-                        </a>
-                        <a class="btn btn-warning btn-sm" rel="publisher" href="https://www.instagram.com/priyanka.gangireddy">
+                        <a class="btn btn-danger btn-sm" rel="publisher" href="https://www.instagram.com/priyanka.gangireddy">
                             <i class="fa fa-instagram"></i>
                         </a>
                     </div>
