--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,5 +1,5 @@
 
-    <div class="container" style="padding:0px; height: 100%">
+    <div class="container" style="padding:0px; height: 100%; width: 100%">
         <div class="jumbotron">
             <h1 class="display-3">{{vm.resumeData.heading}}</h1>
             <p class="lead">My Real Time and Internship Experiences</p>
