changes made in linkedin.html page

--- a/templates/linkedin.html
+++ b/templates/linkedin.html
@@ -41,9 +41,9 @@
                             <td>Mar-2014</td>
                         </tr>
                         <tr>
-                            <td>NIIT Technologies Limited</td>
-                            <td>Jr.UI developer</td>
-                            <td>May-2012</td>
+                            <td>Just Dail Limited</td>
+                            <td>Java UI developer</td>
+                            <td>June-2012</td>
                             <td>Mar-2013</td>
                         </tr>
                         </tbody>
