added changes to linkedin.html page

--- a/templates/linkedin.html
+++ b/templates/linkedin.html
@@ -30,18 +30,18 @@
                         </tr>
                         <tr>
                             <td>FDU</td>
-                            <td>UI developer</td>
+                            <td>Salesforce/UI developer</td>
                             <td>Dec-2014</td>
                             <td>Nov-2015</td>
                         </tr>
                         <tr>
-                            <td>Just Dail Limited</td>
+                            <td>Just Dial Limited</td>
                             <td>UI developer</td>
                             <td>May-2013</td>
                             <td>Mar-2014</td>
                         </tr>
                         <tr>
-                            <td>Just Dail Limited</td>
+                            <td>Just Dial Limited</td>
                             <td>Java UI developer</td>
                             <td>June-2012</td>
                             <td>Mar-2013</td>
