--- a/templates/achievements.html
+++ b/templates/achievements.html
@@ -11,7 +11,7 @@
                 </ul>
             </div>
         </div>
-        <div class="row">
+      <!--  <div class="row">
             <label>{{vm.achievementsData.certificationLabel}}</label>
             <div>
                 <ul>
@@ -21,7 +21,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </div>
 
 </div>
