--- a/templates/linkedin.html
+++ b/templates/linkedin.html
@@ -1,11 +1,11 @@
-<div class="container" style="width: 100%; padding: 0px;">
+<!--- <div class="container" style="width: 100%; padding: 0px;">
     <div class="jumbotron">
         <h1 class="display-3">Priya Reddy</h1>
         <p class="lead"></p>
         <hr class="my-4">
         <div class="row">
             <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-            <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/priya-reddy-084143147" data-format="inline" data-related="false"></script>
+           <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/priya-reddy-084143147" data-format="inline" data-related="false"></script>
         </div>
         <div class="row">
             <div class="col-lg-12">
@@ -53,5 +53,5 @@
 
         </div>
     </div>
-</div>
+</div> -->
 
